--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@strapi/plugin-cloud": "5.12.7",
     "@strapi/plugin-graphql": "^5.13.0",
     "@strapi/plugin-users-permissions": "5.12.7",
+    "@strapi/provider-upload-aws-s3": "^5.13.0",
     "@strapi/strapi": "5.12.7",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
