--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
-    "@strapi/plugin-cloud": "5.12.7",
+    "@strapi/plugin-cloud": "5.15.0",
     "@strapi/plugin-graphql": "^5.13.0",
-    "@strapi/plugin-users-permissions": "5.12.7",
+    "@strapi/plugin-users-permissions": "5.15.0",
     "@strapi/provider-upload-aws-s3": "^5.13.0",
-    "@strapi/strapi": "5.12.7",
+    "@strapi/strapi": "5.15.0",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
     "pg": "^8.15.6",
@@ -37,7 +37,7 @@
     "typescript": "^5"
   },
   "engines": {
-    "node": ">=18.0.0 <=22.x.x",
+    "node": "20.x.x",
     "npm": ">=6.0.0"
   },
   "strapi": {
