--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
     "pg": "^8.15.6",
+    "pg-connection-string": "^2.9.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
